--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "jsonschema": "^1.2.4",
+    "mongodb": "^3.0.7",
     "morgan": "~1.9.0",
     "serve-favicon": "^2.5.0"
   }
